# logbert-structured-api

./: .gitignore  README.md  added_tokens.json  anomalous_log_lines.txt  api.Dockerfile  bert.py  bert_config.py  build.sh  config.json  config.py  docker-compose.yml  gradio_ui.py  llm.py  main.py  new_grad.py  requirements.txt  tokenizer.json  tokenizer_config.json  ui-requirements.txt  ui.Dockerfile  vhm_center.pt
.github/workflows/: Original_docker-build-push.yml  deploy-ec2.yml  docker-build-push.yml  test_docker_push.yml
data_validation/: models.py
fastapi/: best_ft.pt  drain3.ini  logbert_api.py  pyproject.toml
fastapi/data_validation/: models.py  parser.py
fastapi/logbert_infer/: dataset.py  losses.py  model.py
