[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-logbert-infer"
version = "0.1.0"
dependencies = ["fastapi", "uvicorn[standard]", "torch", "drain3", "numpy < 2"]

[tool.setuptools.packages.find]
include = ["logbert_infer*"]

[project.scripts]
logbert-infer = "logbert_infer.infer:cli"

